--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -16,8 +16,9 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="@color/greenTestB">
+            android:layout_height="wrap_content"
+            android:background="@color/greenTestB"
+            android:padding="10dp">
 
             <ImageButton
                 android:id="@+id/navDrawerButton"
