--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -7,10 +7,8 @@
     android:padding="16dp"
     android:background="@null"
     android:gravity="center_vertical"
-    android:theme="@style/Base.Theme.EcoSynergyApp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:theme="@style/Base.Theme.EcoSynergyApp">
 
-    <!-- LinearLayout for CircleImageView and user info -->
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -52,11 +50,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="rafael@ecosynergy.com"
-            android:textColor="@color/black"
+            android:textColor="@color/gray"
             android:textSize="14sp"/>
     </LinearLayout>
 
-    <!-- ImageButton for logout -->
     <ImageButton
         android:id="@+id/btnlogout"
         android:layout_width="40dp"
