--- a/app/src/main/res/layout/activity_teamsettings.xml
+++ b/app/src/main/res/layout/activity_teamsettings.xml
@@ -4,12 +4,104 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center">
+    android:gravity="top">
 
-    <TextView
+    <ImageButton
+        android:id="@+id/btnBack"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@null"
+        android:src="@drawable/baseline_arrow_back_24"
+        android:scaleType="fitXY"
+        android:gravity="top"
+        android:layout_margin="15dp"/>
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="OI"
-        android:textSize="30sp"/>
+        android:orientation="vertical"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:layout_marginBottom="20dp">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:src="@drawable/letterequipe"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Nome da Equipe"
+            android:textSize="20sp"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_gravity="center">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Configurações"
+            android:textSize="15sp"
+            android:layout_marginBottom="5dp"/>
+
+        <Button
+            android:id="@+id/btnOverview"
+            android:layout_width="330dp"
+            android:layout_height="wrap_content"
+            android:text="Visão Geral"
+            android:drawableStart="@drawable/baseline_info_24"
+            android:drawableTint="@color/white"
+            android:drawablePadding="4dp"/>
+
+        <Button
+            android:id="@+id/btnInvites"
+            android:layout_width="330dp"
+            android:layout_height="wrap_content"
+            android:text="Convites"
+            android:drawableStart="@drawable/"
+            android:drawableTint="@color/white"
+            android:drawablePadding="4dp"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Gestão de Usuários"
+            android:textSize="15sp"
+            android:layout_marginBottom="5dp"/>
+
+        <Button
+            android:id="@+id/btnMembers"
+            android:layout_width="330dp"
+            android:layout_height="wrap_content"
+            android:text="Membros"
+            android:drawableStart="@drawable/baseline_people_24"
+            android:drawableTint="@color/white"
+            android:drawablePadding="4dp"/>
+
+        <Button
+            android:id="@+id/btnBans"
+            android:layout_width="330dp"
+            android:layout_height="wrap_content"
+            android:text="Banimentos"
+            android:drawableStart="@drawable/baseline_block_24"
+            android:drawableTint="@color/white"
+            android:drawablePadding="4dp"/>
+
+    </LinearLayout>
 
 </LinearLayout>
