--- a/app/src/main/res/layout/fragment_teams.xml
+++ b/app/src/main/res/layout/fragment_teams.xml
@@ -26,9 +26,10 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Nome da Equipe"
+            tools:text = "EcoSynergy"
             android:textStyle="bold"
             android:textSize="20sp"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:gravity="center_vertical"/>
 
@@ -39,7 +40,7 @@
             android:scaleType="fitXY"
             android:src="@drawable/baseline_settings_24"
             android:background="@null"
-            android:layout_marginEnd="10dp"
+            android:layout_marginEnd="20dp"
             android:layout_gravity="end|center"/>
 
     </LinearLayout>
