--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="gray">#616161</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="greenTest">#42f560</color>
-    <color name="greenTestB">#22c73d</color>
+    <color name="greenTest">#ADE5AB</color>
+    <color name="greenTestB">#ADE5AB</color>
     <color name="blue">#0091FF</color>
 </resources>
