--- a/app/src/main/res/layout/activity_teamsettings.xml
+++ b/app/src/main/res/layout/activity_teamsettings.xml
@@ -30,12 +30,14 @@
             android:layout_width="75dp"
             android:layout_height="75dp"
             android:src="@drawable/default_image"
-            android:id="@+id/teamPicture"/>
+            android:id="@+id/teamPicture"
+            android:layout_marginBottom="5dp"/>
 
         <TextView
             android:id="@+id/lblTeamName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="?android:attr/textColorPrimary"
             android:text="Nome da Equipe"
             android:textSize="20sp"
             android:textStyle="bold"/>
@@ -47,12 +49,14 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_gravity="center"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp">
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="?android:attr/textColorPrimary"
+            android:layout_marginStart="5dp"
             android:text="Configurações"
             android:textSize="15sp"
             android:textStyle="bold"
@@ -87,13 +91,15 @@
         android:orientation="vertical"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp">
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
             android:text="Gestão de Usuários"
+            android:textColor="?android:attr/textColorPrimary"
             android:textSize="15sp"
             android:textStyle="bold"
             android:layout_marginBottom="5dp"/>
