--- a/app/src/main/res/layout/members_layout.xml
+++ b/app/src/main/res/layout/members_layout.xml
@@ -16,11 +16,12 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imgUser"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
             android:src="@drawable/default_image"
             tools:src="@drawable/r"
-            android:layout_marginStart="10dp"/>
+            android:layout_marginStart="10dp"
+            android:layout_gravity="center"/>
 
         <LinearLayout
             android:layout_width="0dp"
@@ -67,13 +68,40 @@
 
         </LinearLayout>
         <ImageButton
-            android:id="@+id/btnRemove"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:id="@+id/btnEditRole"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:layout_gravity="end|center"
+            android:contentDescription="ButtonEditHole"
+            android:src="@drawable/baseline_edit_24"
+            android:background="@color/transparent"
+            app:tint="?android:attr/iconTint"
+            android:scaleType="fitXY"
+            android:layout_marginEnd="10dp"
+            android:visibility="gone"/>
+
+        <ImageButton
+            android:id="@+id/btnRemove"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_gravity="end|center"
+            android:contentDescription="ButtonRemoveUser"
             android:src="@drawable/baseline_close_24"
             android:background="@color/transparent"
-            app:tint="@color/red"
+            app:tint="?android:attr/iconTint"
+            android:scaleType="fitXY"
+            android:layout_marginEnd="10dp"
+            android:visibility="gone"/>
+
+        <ImageButton
+            android:id="@+id/btnExitTeam"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_gravity="end|center"
+            android:contentDescription="ButtonRemoveUser"
+            android:src="@drawable/baseline_logout_24"
+            android:background="@color/transparent"
+            app:tint="?android:attr/iconTint"
             android:scaleType="fitXY"
             android:layout_marginEnd="10dp"
             android:visibility="gone"/>
