--- a/app/src/main/res/layout/fragment_team_members.xml
+++ b/app/src/main/res/layout/fragment_team_members.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".teams.TeamMembersFragment"
+    android:id="@+id/swipeRefresh"
+    android:focusable="false">
+
+<LinearLayout
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -65,3 +73,4 @@
     </com.facebook.shimmer.ShimmerFrameLayout>
 
 </LinearLayout>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
