--- a/app/src/main/res/layout/fragment_create_team_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_create_team_bottom_sheet.xml
@@ -42,7 +42,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginBottom="20dp">
+            android:layout_marginBottom="20dp"
+            android:layout_gravity="center">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imgTeam"
@@ -58,7 +59,6 @@
             android:layout_height="60dp"
             app:shimmer_auto_start="true"
             android:visibility="visible">
-
             <View
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -85,7 +85,7 @@
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:hint="Handle da Equipe"
+            android:hint="\@ da Equipe"
             android:layout_marginBottom="20dp">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -111,21 +111,58 @@
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:hint="Setor"
+            android:hint="Fuso horário"
             android:layout_marginBottom="20dp">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/txtSector"
+            <com.google.android.material.textfield.MaterialAutoCompleteTextView
+                android:id="@+id/txtTimezone"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:inputType="text"/>
+                android:inputType="text"
+                android:textColor="@color/disabled"
+                android:enabled="false"
+                android:clickable="true"
+                android:textSize="16sp"
+                android:paddingStart="15dp"/>
         </com.google.android.material.textfield.TextInputLayout>
+
+        <TextView
+            android:text="Atividade/Setor"
+            android:layout_gravity="start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="?android:attr/textColorPrimary"
+            android:textSize="12sp"
+            android:visibility="visible"
+            android:layout_marginStart="12dp"
+            android:layout_marginBottom="2dp"/>
+
+        <Spinner
+            android:entries="@array/activities_array"
+            android:id="@+id/spinnerActivities"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:spinnerMode="dialog"
+            android:background="@drawable/spinner_background"/>
+
+        <TextView
+            android:text="Não disponível no momento!"
+            android:layout_gravity="start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/disabled"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            android:visibility="visible"
+            android:layout_marginStart="10dp"
+            android:layout_marginBottom="20dp"/>
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:hint="Plano"
-            android:layout_marginBottom="20dp">
+            android:layout_marginBottom="20dp"
+            android:visibility="gone">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/txtPlan"
