--- a/app/src/main/res/layout/fragment_team_overview.xml
+++ b/app/src/main/res/layout/fragment_team_overview.xml
@@ -126,27 +126,44 @@
                             android:clickable="true"/>
                     </com.google.android.material.textfield.TextInputLayout>
 
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="Setor"
-                        android:layout_marginBottom="10dp">
 
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/txtSector"
+                <TextView
+                    android:id="@+id/spinnerError"
+                    android:text="Atividade/Setor"
+                    android:layout_gravity="start"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="?android:attr/textColorPrimary"
+                    android:textSize="12sp"
+                    android:visibility="visible"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginBottom="2dp"/>
+
+                        <Spinner
+                            android:entries="@array/activities_array"
+                            android:id="@+id/spinnerActivities"
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:text="carregando..."
-                            android:inputType="text"
-                            android:enabled="false"
-                            android:clickable="true"/>
-                    </com.google.android.material.textfield.TextInputLayout>
+                            android:layout_height="60dp"
+                            android:spinnerMode="dialog"
+                            android:background="@drawable/spinner_background"/>
 
+                <TextView
+                    android:text="Não disponível no momento!"
+                    android:layout_gravity="start"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/disabled"
+                    android:textSize="12sp"
+                    android:textStyle="bold"
+                    android:visibility="visible"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginBottom="20dp"/>
                     <com.google.android.material.textfield.TextInputLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Plano"
-                        android:layout_marginBottom="10dp">
+                        android:layout_marginBottom="10dp"
+                        android:visibility="gone">
 
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/txtPlan"
